# trash-app

./: .gitignore  README.md  app.json  package-lock.json  package.json
app/: README.ko.md  README.md
app-detail/: app-detail.txt
app/src/app/: camera.tsx  detail.tsx  edit.tsx  index.tsx  register.tsx
app/src/components/: app-map.tsx  app-map.web.tsx
app/src/constants/: theme.ts
app/src/contexts/: BinContext.tsx
app/src/services/: api.ts
backend/: README.md
backend/agents/: AGENTS.md
backend/backend/: .env.example  README.md  pyproject.toml
backend/backend/app/: __init__.py  main.py
backend/backend/app/api/v1/: router.py
backend/backend/app/api/v1/endpoints/: container_images.py  containers.py
backend/backend/app/core/: config.py
backend/backend/app/db/: session.py
backend/backend/app/models/: __init__.py  waste_container.py
backend/backend/app/schemas/: container_image.py  waste_container.py
backend/backend/app/services/: image_storage.py
backend/backend/data/: okayama_waste_containers.db
src/app/: _layout.tsx  register.tsx
