[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "okayama-waste-container-expedition"
version = "0.1.0"
description = "Local-first FastAPI backend for Okayama waste container map data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "pydantic-settings>=2.0,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.5,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
